// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getSolidDataset returns a SolidDataset representing the fetched Turtle 1`] = `
{
  "graphs": {
    "default": {
      "https://arbitrary.pod/resource": {
        "predicates": {
          "http://www.w3.org/1999/02/22-rdf-syntax-ns#type": {
            "namedNodes": [
              "http://xmlns.com/foaf/0.1/PersonalProfileDocument",
            ],
          },
          "http://xmlns.com/foaf/0.1/maker": {
            "namedNodes": [
              "https://arbitrary.pod/resource#me",
            ],
          },
          "http://xmlns.com/foaf/0.1/primaryTopic": {
            "namedNodes": [
              "https://arbitrary.pod/resource#me",
            ],
          },
        },
        "type": "Subject",
        "url": "https://arbitrary.pod/resource",
      },
      "https://arbitrary.pod/resource#me": {
        "predicates": {
          "http://www.w3.org/1999/02/22-rdf-syntax-ns#type": {
            "namedNodes": [
              "http://xmlns.com/foaf/0.1/Person",
            ],
          },
          "http://www.w3.org/2006/vcard/ns#fn": {
            "literals": {
              "http://www.w3.org/2001/XMLSchema#string": [
                "Vincent",
              ],
            },
          },
        },
        "type": "Subject",
        "url": "https://arbitrary.pod/resource#me",
      },
    },
  },
  "internal_resourceInfo": {
    "contentLocation": undefined,
    "contentType": "text/turtle",
    "isRawData": false,
    "linkedResources": {},
    "location": undefined,
    "sourceIri": "https://arbitrary.pod/resource",
  },
  "type": "Dataset",
}
`;

exports[`getWellKnownSolid returns the contents of .well-known/solid for the given resource 1`] = `
{
  "graphs": {
    "default": {
      "_:n3-3": {
        "predicates": {
          "http://www.w3.org/1999/02/22-rdf-syntax-ns#type": {
            "namedNodes": [
              "http://www.w3.org/ns/solid/terms#DiscoveryDocument",
            ],
          },
          "http://www.w3.org/ns/auth/acl#trustedApp": {
            "namedNodes": [
              "https://inrupt.com",
            ],
          },
          "http://www.w3.org/ns/solid/terms#maxPodsPerOwner": {
            "literals": {
              "http://www.w3.org/2001/XMLSchema#integer": [
                "10",
              ],
            },
          },
          "http://www.w3.org/ns/solid/terms#notificationGateway": {
            "namedNodes": [
              "https://notification.inrupt.com/",
            ],
          },
          "http://www.w3.org/ns/solid/terms#provision": {
            "namedNodes": [
              "https://provision.inrupt.com/",
            ],
          },
          "http://www.w3.org/ns/solid/terms#validatesRdfSources": {
            "literals": {
              "http://www.w3.org/2001/XMLSchema#boolean": [
                "true",
              ],
            },
          },
        },
        "type": "Subject",
        "url": "_:n3-3",
      },
    },
  },
  "internal_resourceInfo": {
    "contentLocation": undefined,
    "contentType": "text/turtle",
    "isRawData": false,
    "linkedResources": {},
    "location": undefined,
    "sourceIri": "",
  },
  "type": "Dataset",
}
`;
